fix display of dropdown subnav items on mobile

--- a/wp-content/universal-assets/v2/scss/universal-secondnav.scss
+++ b/wp-content/universal-assets/v2/scss/universal-secondnav.scss
@@ -78,6 +78,9 @@
                     margin-left: -10px;
                 }
             }
+            @media screen and (max-width: 800px) {
+                display: none;
+            }
         }
         .dropdown-menu {
             font-size: 16px;
@@ -92,15 +95,20 @@
                     background: #666;
                 }
             }
-        }
-        @media screen and (max-width: 800px) {
-            a.dropdown-toggle {
-                span.caret {
-                    margin-left: 0px;
+            @media screen and (max-width: 800px) {
+                position: relative !important;
+                top: 0px;
+                box-shadow: none;
+                border: none;
+                li {
+                    a { color: #333 !important; }
+                    &:hover {
+                        background: #fff;
+                    }
                 }
             }
-            .dropdown-menu li a { color: #fff !important; }
         }
+        
         .dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, .dropdown-menu > .active > a:hover { background-color: #666; }
         // show dropdown menu on hover
         &:hover .dropdown-menu {
